test/corpus/basic.txt
==================
hello world
==================
bit of latex

---

(source_file
	(latex)
)

==================
Add a real command
==================

a bit of	\textit{latex}

---

(source_file
	(latex)
)

==================
jnw signature
==================

a bit of \textit{latex}.

We all know 2 > 1

<<>>=
@

---

(source_file
	(latex)
	(jchunk
		(jnv_sig_beg)
		(jnv_sig_end)
		(jnv_content)
	)
)

==================
jnw signature - with option
==================

a bit of \textit{latex}.

We all know 2 > 1

<<echo=T>>=
@

---

(source_file
	(latex)
	(jchunk
		(jnv_sig_beg)
        (jnv_sig_options
		    (jnv_key_pair
			    (jnv_key)
			    (jnv_val)
		    )
		)
		(jnv_sig_end)
		(jnv_content)
	)
)

==================
jnw signature - with label
==================

a bit of \textit{latex}.

We all know 2 > 1

<<foo >>=
@

---

(source_file
	(latex)
	(jchunk
		(jnv_sig_beg)
		(jnv_sig_options
            (jnv_label)
		)
		(jnv_sig_end)
		(jnv_content)
	)
)

==================
jnw signature - with label and option
==================

a bit of \textit{latex}.

We all know 2 > 1

<<foo, results = "asis">>=
@

---

(source_file
	(latex)
	(jchunk
		(jnv_sig_beg)
		(jnv_sig_options
            (jnv_label)
            (jnv_key_pair
                (jnv_key)
                (jnv_val)
            )
        )
		(jnv_sig_end)
		(jnv_content)
	)
)

==================
jnw signature - with options
==================

a bit of \textit{latex}.

We all know 2 > 1

<<echo = T, results = "asis">>=
@

---

(source_file
	(latex)
	(jchunk
		(jnv_sig_beg)
		(jnv_sig_options
            (jnv_key_pair
                (jnv_key)
                (jnv_val)
            )
            (jnv_key_pair
                (jnv_key)
                (jnv_val)
            )
		)
		(jnv_sig_end)
		(jnv_content)
	)
)

==================
jnw signature - with text
==================

a bit of \textit{latex}.

We all know 2 > 1

<<echo = T, results = "asis", fig.height = 4>>=
one <- 1 + 1
@

Back again!

---

(source_file
	(latex)
	(jchunk
		(jnv_sig_beg)
        (jnv_sig_options
            (jnv_key_pair
                (jnv_key)
                (jnv_val)
            )
            (jnv_key_pair
                (jnv_key)
                (jnv_val)
            )
            (jnv_key_pair
                (jnv_key)
                (jnv_val)
            )
        )
		(jnv_sig_end)
		(jnv_content)
	)
	(latex)
)
